--- a/gltrack-app/src/app/components/dashboard/dashboard.component.html
+++ b/gltrack-app/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,51 @@
-<p>
-  dashboard works!
-</p>
+<div class="flex-row">
+    <div class="flex-row-item uno">
+        <p>
+            dashboard works!
+        </p>
+    </div>
+    <div class="flex-row-item dos">
+        <p>
+            dashboard works!
+        </p>
+    </div>
+    <div class="flex-row-item dos">
+        <p>
+            dashboard works!
+        </p>
+    </div>
+    <div class="flex-row-item dos">
+        <p>
+            dashboard works!
+        </p>
+    </div>
+    <div class="flex-row-item uno">
+        <p>
+            dashboard works!
+        </p>
+    </div>
+    <div class="flex-row-item uno">
+        <p>
+            dashboard works!
+        </p>
+    </div>
+
+    <div class="flex-row-item dos">
+        <p>
+            dashboard works!
+        </p>
+    </div>
+    <div class="flex-row-item dos">
+        <p>
+            dashboard works!
+        </p>
+    </div>
+</div>
+
 
 <mat-card>
-  <mat-card-title>Mis registros</mat-card-title>
+    <mat-card-title>Mis registros</mat-card-title>
 
-  <app-tabla-registros [registros]="registros" [permitirEliminar]="false"></app-tabla-registros>
+    <app-tabla-registros [permitirEliminar]="false" [registros]="registros"></app-tabla-registros>
 
 </mat-card>
