--- a/gltrack-app/src/app/components/dashboard/dashboard.component.css
+++ b/gltrack-app/src/app/components/dashboard/dashboard.component.css
@@ -2,13 +2,8 @@
   display: flex;
   width: 100%;
   flex-wrap: wrap;
+  padding-bottom: 20px;
 }
-
-/* .flex-row-item {
-  border: 1px;
-  border-color: crimson;
-  border-style: dashed;
-} */
 
 .flex-row-item.uno {
   width: 100%;
@@ -16,4 +11,12 @@
 
 .flex-row-item.dos {
   width: 50%;
+}
+
+.flex-row-item mat-card {
+  margin-right: 10px;
+}
+
+.flex-row-item:last-child mat-card {
+  margin-right: 0px;
 }
