--- a/gltrack-app/src/app/components/dashboard/dashboard.component.html
+++ b/gltrack-app/src/app/components/dashboard/dashboard.component.html
@@ -1,51 +1,36 @@
 <div class="flex-row">
     <div class="flex-row-item uno">
-        <p>
-            dashboard works!
-        </p>
+        <mat-card>
+            <p>
+                dashboard works!
+            </p>
+        </mat-card>
+    </div>
+</div>
+<div class="flex-row">
+    <div class="flex-row-item dos">
+        <mat-card>
+            <p>
+                dashboard works!
+            </p>
+        </mat-card>
     </div>
     <div class="flex-row-item dos">
-        <p>
-            dashboard works!
-        </p>
-    </div>
-    <div class="flex-row-item dos">
-        <p>
-            dashboard works!
-        </p>
-    </div>
-    <div class="flex-row-item dos">
-        <p>
-            dashboard works!
-        </p>
-    </div>
-    <div class="flex-row-item uno">
-        <p>
-            dashboard works!
-        </p>
-    </div>
-    <div class="flex-row-item uno">
-        <p>
-            dashboard works!
-        </p>
-    </div>
-
-    <div class="flex-row-item dos">
-        <p>
-            dashboard works!
-        </p>
-    </div>
-    <div class="flex-row-item dos">
-        <p>
-            dashboard works!
-        </p>
+        <mat-card>
+            <p>
+                dashboard works!
+            </p>
+        </mat-card>
     </div>
 </div>
 
+<div class="flex-row">
+    <div class="flex-row-item uno">
+        <mat-card>
+            <mat-card-title>Mis registros</mat-card-title>
 
-<mat-card>
-    <mat-card-title>Mis registros</mat-card-title>
+            <app-tabla-registros [permitirEliminar]="false" [registros]="registros"></app-tabla-registros>
 
-    <app-tabla-registros [permitirEliminar]="false" [registros]="registros"></app-tabla-registros>
-
-</mat-card>
+        </mat-card>
+    </div>
+</div>
