New charts from schematics. Updated dashboard.

--- a/gltrack-app/src/app/components/dashboard/dashboard.component.html
+++ b/gltrack-app/src/app/components/dashboard/dashboard.component.html
@@ -1,25 +1,19 @@
 <div class="flex-row">
     <div class="flex-row-item uno">
         <mat-card>
-            <p>
-                dashboard works!
-            </p>
+            <app-historico-mediciones-chart></app-historico-mediciones-chart>
         </mat-card>
     </div>
 </div>
 <div class="flex-row">
     <div class="flex-row-item dos">
         <mat-card>
-            <p>
-                dashboard works!
-            </p>
+            <app-comparativo-semanal-chart></app-comparativo-semanal-chart>
         </mat-card>
     </div>
     <div class="flex-row-item dos">
         <mat-card>
-            <p>
-                dashboard works!
-            </p>
+            <app-global-niveles-chart></app-global-niveles-chart>
         </mat-card>
     </div>
 </div>
