--- a/gltrack-app/src/app/components/dashboard/dashboard.component.html
+++ b/gltrack-app/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="flex-row">
     <div class="flex-row-item uno">
         <mat-card>
-            <app-historico-mediciones-chart></app-historico-mediciones-chart>
+            <app-historico-mediciones-chart [mediciones]="registros"></app-historico-mediciones-chart>
         </mat-card>
     </div>
 </div>
