comparativo-mensual-chart ready

--- a/gltrack-app/src/app/components/dashboard/dashboard.component.html
+++ b/gltrack-app/src/app/components/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
 <div class="flex-row">
     <div class="flex-row-item dos">
         <mat-card>
-            <app-comparativo-semanal-chart></app-comparativo-semanal-chart>
+            <app-comparativo-mensual-chart [mediciones]="registros"></app-comparativo-mensual-chart>
         </mat-card>
     </div>
     <div class="flex-row-item dos">
