global-niveles-chart ready. Tweaked mediciones.srv

--- a/gltrack-app/src/app/components/dashboard/dashboard.component.html
+++ b/gltrack-app/src/app/components/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="flex-row-item dos">
         <mat-card>
-            <app-global-niveles-chart></app-global-niveles-chart>
+            <app-global-niveles-chart [mediciones]="registros"></app-global-niveles-chart>
         </mat-card>
     </div>
 </div>
